@@ -778,7 +778,7 @@ BEGIN
     LTEXT           "Type a key, or press Escape to disable.",65429,53,14,125,8
 END
 
-MEMWATCH DIALOGEX 0, 0, 260, 269
+MEMWATCH DIALOGEX 0, 0, 260, 263
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Memory Watch"
 MENU MEMWATCHMENU
@@ -841,30 +841,31 @@ BEGIN
     LTEXT           "Address",65424,135,7,26,8
     LTEXT           "Value",MW_ValueLabel2,231,7,19,8
     LTEXT           " ",EDIT00_RESULTS,89,225,26,8
-    GROUPBOX        "Memory Change Monitoring",IDC_STATIC,0,202,129,65
+    GROUPBOX        "Memory Change Monitoring",IDC_STATIC,0,202,129,57,BS_CENTER
     LTEXT           "Address",IDC_STATIC,6,213,26,8
     LTEXT           "Count",IDC_STATIC,90,213,20,8
-    LTEXT           "Change formula",IDC_STATIC,36,213,50,8
+    LTEXT           "Formula",IDC_STATIC,47,213,26,8
     LTEXT           " ",MEMW_EDIT00RMADDRESS,7,225,24,8
-    PUSHBUTTON      " ",MEMW_EDIT00RESET,115,226,11,7
+    PUSHBUTTON      " ",MEMW_EDIT00RESET,115,225,11,7
     LTEXT           "reset",IDC_STATIC,112,213,16,8
     COMBOBOX        MEMW_EDIT00FORMULA,37,223,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           " ",MEMW_EDIT01RMADDRESS,7,241,24,8
     COMBOBOX        MEMW_EDIT01FORMULA,37,241,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           " ",EDIT01_RESULTS,89,244,25,8
-    PUSHBUTTON      " ",MEMW_EDIT01RESET,115,243,11,7
+    LTEXT           " ",EDIT01_RESULTS,89,241,25,8
+    PUSHBUTTON      " ",MEMW_EDIT01RESET,115,241,11,7
     LTEXT           " ",EDIT02_RESULTS,217,225,26,8
     LTEXT           "Address",IDC_STATIC,133,213,26,8
-    LTEXT           "Change formula",IDC_STATIC,163,213,50,8
+    LTEXT           "Formula",IDC_STATIC,173,213,26,8
     LTEXT           " ",MEMW_EDIT02RMADDRESS,135,225,24,8
-    PUSHBUTTON      " ",MEMW_EDIT02RESET,243,226,11,7
+    PUSHBUTTON      " ",MEMW_EDIT02RESET,242,225,11,7
     LTEXT           "reset",IDC_STATIC,239,213,16,8
     COMBOBOX        MEMW_EDIT02FORMULA,165,223,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           " ",MEMW_EDIT03RMADDRESS,135,242,24,8
+    LTEXT           " ",MEMW_EDIT03RMADDRESS,135,241,24,8
     COMBOBOX        MEMW_EDIT03FORMULA,165,241,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           " ",EDIT03_RESULTS,217,244,28,8
-    PUSHBUTTON      " ",MEMW_EDIT03RESET,243,243,11,7
-    GROUPBOX        "Memory Change Monitoring",IDC_STATIC,131,202,125,65
+    LTEXT           " ",EDIT03_RESULTS,217,241,28,8
+    PUSHBUTTON      " ",MEMW_EDIT03RESET,242,241,11,7
+    GROUPBOX        "Memory Change Monitoring",IDC_STATIC,131,202,125,57,BS_CENTER
+    LTEXT           "Count",IDC_STATIC,217,213,20,8
 END
 
 DEBUGGER DIALOGEX 54, 74, 548, 305
@@ -1430,7 +1431,7 @@ BEGIN
 
     "MEMWATCH", DIALOG
     BEGIN
-        BOTTOMMARGIN, 267
+        BOTTOMMARGIN, 262
     END
 
     "DEBUGGER", DIALOG
